--- a/07.html
+++ b/07.html
@@ -222,17 +222,17 @@
                 <h2>硫酸铜晶体</h2>
                 <div class="method-card">
                     <div class="step-list">
-                        <img src="紫色硫酸铜01.png" class="content-image" alt="">
+                        <img src="紫色硫酸铜01.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：紫色硫酸铜</p>
-                        <img src="作品12.png" class="content-image" alt="">
+                        <img src="作品12.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
-                        <img src="作品13.png" class="content-image" alt="">
+                        <img src="作品13.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
-                        <img src="作品14.png" class="content-image" alt="">
+                        <img src="作品14.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
-                        <img src="作品15.png" class="content-image" alt="">
+                        <img src="作品15.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
-                        <img src="作品34.png" class="content-image" alt="">
+                        <img src="作品34.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：长街听风</p>
                     </div>
                 </div>
@@ -242,15 +242,15 @@
                 <h2>硫酸铝钾/铬明矾混晶</h2>
                 <div class="method-card">
                     <div class="step-list">
-                        <img src="作品2.png" class="content-image" alt="">
+                        <img src="作品2.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
-                        <img src="作品3.png" class="content-image" alt="">
+                        <img src="作品3.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
-                        <img src="作品6.png" class="content-image" alt="">
+                        <img src="作品6.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
-                        <img src="作品7.png" class="content-image" alt="">
+                        <img src="作品7.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
-                        <img src="作品8.png" class="content-image" alt="">
+                        <img src="作品8.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
                     </div>
                 </div>
@@ -259,9 +259,9 @@
             <section id="sulfate2">
                 <h2>硫酸亚铁晶体</h2>
                 <div class="method-card">
-                    <img src="作品18.png" class="content-image" alt="">
+                    <img src="作品18.png" class="content-image" alt="" style="display: block; margin: auto;">
                     <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
-                    <img src="作品19.png" class="content-image" alt="">
+                    <img src="作品19.png" class="content-image" alt="" style="display: block; margin: auto;">
                     <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
                 </div>
             </section>
@@ -270,9 +270,9 @@
                 <h2>草酸铝（铬）酸钠</h2>
                 <div class="method-card">
                     <div class="step-list">
-                        <img src="作品10.png" class="content-image" alt="">
+                        <img src="作品10.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：紫色硫酸铜</p>
-                        <img src="作品11.png" class="content-image" alt="">
+                        <img src="作品11.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
                     </div>
                 </div>
@@ -282,42 +282,69 @@
                 <h2>其他好看晶体</h2>
                 <div class="method-card">
                     <div class="step-list">
-                        <img src="作品9.png" class="content-image" alt="">
+                        <img src="作品9.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：二水合二氯化二乙二胺络铜</p>
-                        <img src="作品26.png" class="content-image" alt="">
+                        <img src="作品26.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：清蒸带鱼，晶体：铜</p>
-                        <img src="作品17.png" class="content-image" alt="">
+                        <img src="作品17.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：硫酸三乙二胺络镍</p>
-                        <img src="三草酸合铁酸钾01.png" class="content-image" alt="">
+                        <img src="三草酸合铁酸钾01.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：三草酸合铁酸钾</p>
-                        <img src="作品20.png" class="content-image" alt="">
+                        <img src="作品20.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：草酸氢钠</p>
-                        <img src="作品21.png" class="content-image" alt="">
+                        <img src="作品21.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：LX虫管吖Galvin，晶体：乙酸铕</p>
-                        <img src="作品22.png" class="content-image" alt="">
+                        <img src="作品22.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：LX虫管吖Galvin，晶体：乙酸铕</p>
-                        <img src="作品23.png" class="content-image" alt="">
+                        <img src="作品23.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：待到群星闪耀时，晶体：三水合丙二酸铁钾</p>
-                        <img src="作品24.png" class="content-image" alt="">
+                        <img src="作品24.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：待到群星闪耀时，晶体：三水合丙二酸铁钾</p>
-                        <img src="作品25.png" class="content-image" alt="">
+                        <img src="作品25.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：待到群星闪耀时，晶体：四氯二水合铜酸钾</p>
-                        <img src="作品27.png" class="content-image" alt="">
+                        <img src="作品27.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：青于，晶体：高铼酸钾</p>
-                        <img src="作品28.png" class="content-image" alt="">
+                        <img src="作品28.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：青于，晶体：高铼酸钾</p>
-                        <img src="作品29.png" class="content-image" alt="">
+                        <img src="作品29.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：青于，晶体：高铼酸钾</p>
-                        <img src="作品30.png" class="content-image" alt="">
+                        <img src="作品30.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：泠鳞，晶体：硫酸钐</p>
-                        <img src="作品31.png" class="content-image" alt="">
+                        <img src="作品31.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：泠鳞，晶体：硫酸谱</p>
-                        <img src="作品32.png" class="content-image" alt="">
+                        <img src="作品32.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：泠鳞，晶体：硫酸钕</p>
-                        <img src="作品33.png" class="content-image" alt="">
+                        <img src="作品33.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：银</p>
-                        <img src="作品35.png" class="content-image" alt="">
+                        <img src="作品35.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：mo，晶体：铯</p>
+                        <img src="作品42.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：三氯化三乙二胺络钴</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="sulfate5">
+                <h2>饼の美学</h2>
+                <div class="method-card">
+                    <div class="step-list">
+                        <p style="text-align:center; color:var(--primary); font-size:1.5em; font-weight:bold;">在这里，预祝大家</p>
+                        <img src="作品36.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <br>
+                        <img src="作品37.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品38.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品39.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品40.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品41.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品43.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品44.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
                     </div>
                 </div>
             </section>
@@ -332,6 +359,7 @@
                 <li><a href="#sulfate2">硫酸亚铁</a></li>
                 <li><a href="#sulfate3">草酸铝（铬）酸钠</a></li>
                 <li><a href="#sulfate4">其他晶体</a></li>
+                <li><a href="#sulfate5">饼の美学</a></li>
                 <li><a href="index.html">返回首页</a></li>
             </ul>
         </nav>
