--- a/07.html
+++ b/07.html
@@ -257,7 +257,7 @@
             </section>
 
             <section id="sulfate2">
-                <h2>硫酸亚铁晶体</h2>
+                <h2>硫酸亚铁铵晶体</h2>
                 <div class="method-card">
                     <img src="作品18.png" class="content-image" alt="" style="display: block; margin: auto;">
                     <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
@@ -356,7 +356,7 @@
             <ul>
                 <li><a href="#copper-sulfate">硫酸铜</a></li>
                 <li><a href="#x1">明矾/铬明矾</a></li>
-                <li><a href="#sulfate2">硫酸亚铁</a></li>
+                <li><a href="#sulfate2">硫酸亚铁铵</a></li>
                 <li><a href="#sulfate3">草酸铝（铬）酸钠</a></li>
                 <li><a href="#sulfate4">其他晶体</a></li>
                 <li><a href="#sulfate5">饼の美学</a></li>
