--- a/09.html
+++ b/09.html
@@ -186,9 +186,9 @@
                 <div class="contributor-card">
                     <div class="badge">研究支持</div>
                     <h3>长街听风</h3>
-                    <p>• 搭建专业人士交流网络，提供行业资源对接<br>
-                    • 整理并分享大量专业文献与研究经验<br>
-                    • 提供专业指导建议</p>
+                    <p>• 硫酸铜晶体缺陷分析<br>
+                    • 提供温控设备选型建议<br>
+                    • 溶液过滤方案优化</p>
                 </div>
 
                 <div class="contributor-card">
