--- a/w1.html
+++ b/w1.html
@@ -413,7 +413,7 @@
                         </div>
                         <p>高透明度、适合培养大单晶</p>
                         <div class="card-footer">
-                            <a disabled>敬请期待</a>
+                            <a href="10.html">阅读全文 →</a>
                         </div>
                     </div>
                 </article>
