--- a/w1.html
+++ b/w1.html
@@ -417,7 +417,28 @@
                         </div>
                     </div>
                 </article>
+            </div>
 
+            <div class="section-title">
+                <h2>单质晶体</h2>
+            </div>
+            <div class="card-grid">
+                <article class="card">
+                    <div class="image-container">
+                    <img src="bi.png" alt="金属铋" loading="lazy">
+                    <div class="author-name">图源：紫色硫酸铜</div> 
+                </div>
+                    <div class="card-content">
+                        <div>
+                            <h3>金属铋</h3>
+                            <p class="card-meta">简单制作 · 彩色晶体</p>
+                        </div>
+                        <p>为什么铋晶体这么简单制作？他有什么要注意的点吗？</p>
+                        <div class="card-footer">
+                            <a href="11.html">阅读全文 →</a>
+                </div>
+            </div>
+            </article>
             </div>
             <div class="section-divider"></div>
         </main>
