--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
             <div class="update-list">
                 <div class="update-item">
                     <time>2024-02-10</time>
-                    <span>新增鸣谢栏位</span>
+                    <span>新增鸣谢栏位、单质晶体开设、金属铋章节开设</span>
                 </div>
                 <div class="update-item">
                     <time>2024-02-11</time>
