--- a/06.html
+++ b/06.html
@@ -368,8 +368,8 @@
             <section id="post-processing">
                 <h2>七、后期处理</h2>
                 <div class="method-card">
-                    <h3>7.1 图片合成（叠图）</h3>
-                    <p>当拍摄物体较大，微距无法完整对焦时，可以尝试使用Photoshop叠图的方式进行合成。这样可以确保拍摄物体的各个部分都能保持清晰</p>
+                    <h3>7.1 软体合成</h3>
+                    <p>当拍摄物体较大，微距无法完整对焦时，可以尝试使用软体Helicon Focus进行景深合成。这样可以确保拍摄物体的各个部分都能保持清晰</p>
 
                     <h3>7.2 去除噪点</h3>
                     <ul class="step-list">
@@ -384,6 +384,12 @@
                         <li class="step-item">
                             <div class="step-title">RAW格式拍摄</div>
                             <div class="step-detail">如果手机支持RAW格式，后期处理时可以更精准地降噪和调整曝光</div>
+                        </li>
+                        <li class="step-item">
+                            <div class="step-title">脚架与ps</div>
+                            <div class="step-detail">用三脚架固定相机不动，拍5~6张在使用photoshop里的平均值或中间值堆栈
+                                <p>此法更为有效去除噪点且更还原细节</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
