--- a/11.html
+++ b/11.html
@@ -244,8 +244,10 @@
                     <h3>难度评级：★☆☆☆☆（1.5/5）</h3>
                     <ul class="step-list">
                         <li class="step-item">将金属铋加热至完全熔化（熔点271.5℃）</li>
-                        <li class="step-item">去除表面氧化膜后，用镊子/玻璃棒作为凝结核缓慢浸入</li>
-                        <li class="step-item">定期轻提凝结核观察晶体尺寸，如果不生长就旋转晶体90°到液面下</li>
+                        <li class="step-item">去除表面氧化膜后立刻用镊子/玻璃棒作为凝结核，将尖头侵入液体铋里面，一点点就好</li>
+                        <li class="step-item">定期轻提凝结核观察晶体尺寸，如果晶体不往页面下长就旋转晶体90°到液面下
+                            <p>该操作是纠正晶体生产方向，没有出现晶体可能是液态铋温度过高</p>
+                        </li>
                         <li class="step-item">达到理想尺寸后迅速取出，抖落残留液态金属</li>
                     </ul>
                 </div>
