--- a/09.html
+++ b/09.html
@@ -193,7 +193,7 @@
 
                 <div class="contributor-card">
                     <div class="badge">摄影后期咨讯</div>
-                    <h3>浅梦新河</h3>
+                    <h3>浅梦星河</h3>
                     <p>• 指导晶体摄影后期处理，优化影像呈现 <br>
                     • 指导于彩色晶体的培养与拍摄技术<br>
                     • 曾活跃于相关论坛，贡献珍贵经验</p>
