--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                 <article class="card">
                     <div class="image-container">
                     <img src="浅梦新河02.png" alt="溶液配置" loading="lazy">
-                    <div class="author-name">图源：浅梦新河</div> 
+                    <div class="author-name">图源：浅梦星河</div> 
                 </div>
                     <div class="card-content">
                         <div>
@@ -580,7 +580,7 @@
                 <article class="card">
                     <div class="image-container">
                     <img src="浅梦新河.png" alt="保存方法" loading="lazy">
-                    <div class="author-name">图源：浅梦新河</div> 
+                    <div class="author-name">图源：浅梦星河</div> 
                 </div>
                     <div class="card-content">
                         <div>
@@ -597,7 +597,7 @@
                 <article class="card">
                     <div class="image-container">
                     <img src="浅梦新河03.png" alt="晶体摄影" loading="lazy">
-                    <div class="author-name">图源：浅梦新河</div> 
+                    <div class="author-name">图源：浅梦星河</div> 
                 </div>
                     <div class="card-content">
                         <div>
