--- a/07.html
+++ b/07.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="icon.png" type="image/png">
-    <title>晶体化学指南 - 晶体摄影篇</title>
+    <title>晶体化学指南 - 晶体作品集</title>
     <style>
         :root {
             --primary: #2A5C84;
@@ -320,6 +320,18 @@
                         <p style="text-align:center; color:var(--secondary)">作者：mo，晶体：铯</p>
                         <img src="作品42.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：三氯化三乙二胺络钴</p>
+                        <img src="作品49.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：青于，硫酸镨</p>
+                        <img src="作品50.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：青于，硫酸镨</p>
+                        <img src="作品51.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：青于，硫酸镍</p>
+                        <img src="作品52.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：青于，四氯合锰酸甜菜碱锰</p>
+                        <img src="作品53.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：泠鳞，硫酸镨晶簇</p>
+                        <img src="作品54.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：泠鳞，柠檬酸单晶</p>
                     </div>
                 </div>
             </section>
@@ -345,6 +357,14 @@
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
                         <img src="作品44.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品45.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：氯</p>
+                        <img src="作品46.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：长街听风</p>
+                        <img src="作品47.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：长街听风</p>
+                        <img src="作品48.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：冰麒麟</p>
                     </div>
                 </div>
             </section>
