--- a/08.html
+++ b/08.html
@@ -210,6 +210,20 @@
             </article>
 
             <article class="doc-card">
+                <h3>化学物语（删减版）</h3>
+                <div class="doc-meta">
+                    <p>作者：阿贝少</p>
+                    <p>出版年份：2024</p>
+                    <p>文件格式：pdf</p>
+                </div>
+                <div class="doc-actions">
+                    <a href="化学物语（删减版）.pdf" class="btn btn-primary">在线查看</a>
+                    <a href="化学物语（删减版）.pdf" class="btn btn-outline">下载文件</a>
+                </div>
+            </article>
+
+
+            <article class="doc-card">
                 <h3>溶解度表 GV11</h3>
                 <div class="doc-meta">
                     <p>作者：未知</p>
