--- a/index.html
+++ b/index.html
@@ -660,7 +660,11 @@
                 </div>
                 <div class="update-item">
                     <time>2024-02-11</time>
-                    <span>摆烂一天</span>
+                    <span>css共用文件设立、增添作品集图片</span>
+                </div>
+                <div class="update-item">
+                    <time>2024-02-12</time>
+                    <span>可能优化设计、排版</span>
                 </div>
             </div>
             <button class="close-popup">×</button>
