--- a/08.html
+++ b/08.html
@@ -212,7 +212,7 @@
             <article class="doc-card">
                 <h3>化学物语（删减版）</h3>
                 <div class="doc-meta">
-                    <p>作者：阿贝少</p>
+                    <p>作者：不会炼金的阿贝少</p>
                     <p>出版年份：2024</p>
                     <p>文件格式：pdf</p>
                 </div>
