--- a/09.html
+++ b/09.html
@@ -219,7 +219,7 @@
 
             <div class="honor-card" style="margin-top:4rem; text-align:center;">
                 <h2>特别鸣谢</h2>
-                <p>逸久逸久罢已龄，不明就里的乙酸铜，蜉蝣，泠鳞，阿贝少，westleaf</p>
+                <p>逸久逸久罢已龄，不明就里的乙酸铜，蜉蝣，泠鳞，不会炼金的阿贝少，westleaf</p>
                 <p>感谢超过百位晶体化学领域的爱好者，他们在实验探索、数据分享、摄影记录及知识交流等方面提供了宝贵支持，促使本指南更加完善</p>
                 <a href="index.html" style="display:inline-block; margin-top:1.5rem; padding:12px 24px; background:var(--primary); color:white; border-radius:8px; text-decoration:none;">返回首页</a>
             </div>
