--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                 <img src="indexc2_02.png" class="card-image" alt="晶体培养">
                 <span class="card-category">培养晶体</span>
                 <h3 class="card-title">单晶培养 · 溶液控制</h3>
-                <p class="card-description">欢迎投稿作品于此或投稿纠正本站内容</p>
+                <p class="card-description">开始接触晶体化学这门有趣的科目，有哪些晶体可以制作？</p>
                 <div class="card-footer">
                     <span class="card-author">📷 紫色硫酸铜</span>
                     <a href="w1.html" class="card-link">阅读全文 →</a>
@@ -738,13 +738,17 @@
                     <time>2024-02-12</time>
                     <span>优化首页设计</span>
                 </div>
+                <div class="update-item">
+                    <time>2024-02-13</time>
+                    <span>硫酸锰章节草稿出炉</span>
+                </div>
             </div>
             <button class="close-popup">×</button>
         </div>
     </div>
 <script>
 
-    const currentAnnouncementVersion = 'v2025-02-12-v4';
+    const currentAnnouncementVersion = 'v2025-02-13-v4';
             // 交互功能
             document.querySelectorAll('a[href^="#"]').forEach(anchor => {
                 anchor.addEventListener('click', function (e) {
