--- a/index.html
+++ b/index.html
@@ -731,16 +731,8 @@
             <h3>📢 更新公告</h3>
             <div class="update-list">
                 <div class="update-item">
-                    <time>2024-02-11</time>
-                    <span>css共用文件设立、增添作品集图片</span>
-                </div>
-                <div class="update-item">
-                    <time>2024-02-12</time>
-                    <span>优化首页设计</span>
-                </div>
-                <div class="update-item">
-                    <time>2024-02-13</time>
-                    <span>硫酸锰章节草稿出炉</span>
+                    <time>2024-02-16</time>
+                    <span>硫酸锰章节出炉</span>
                 </div>
             </div>
             <button class="close-popup">×</button>
@@ -748,7 +740,7 @@
     </div>
 <script>
 
-    const currentAnnouncementVersion = 'v2025-02-13-v4';
+    const currentAnnouncementVersion = 'v2025-02-16-v4';
             // 交互功能
             document.querySelectorAll('a[href^="#"]').forEach(anchor => {
                 anchor.addEventListener('click', function (e) {
