--- a/w1.html
+++ b/w1.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="icon.png" type="image/png">
     <title>晶体培养指南 - 晶体分类</title>
     <style>
-                :root {
+        :root {
             --primary: #2A5C84;
             --secondary: #5DA8B3;
             --accent: #C4D4E0;
@@ -414,6 +414,20 @@
                         <p>高透明度、适合培养大单晶</p>
                         <div class="card-footer">
                             <a href="10.html">阅读全文 →</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="x.png" alt="" loading="lazy">
+                    <div class="card-content">
+                        <div>
+                            <h3>磷酸锰</h3>
+                            <p class="card-meta">粉色晶体 · 塔盾复盐</p>
+                        </div>
+                        <p>第一个介绍的粉晶体，好做吗？</p>
+                        <div class="card-footer">
+                            <a href="14.html">阅读全文 →</a>
                         </div>
                     </div>
                 </article>
