--- a/07.html
+++ b/07.html
@@ -365,6 +365,8 @@
                         <p style="text-align:center; color:var(--secondary)">作者：长街听风</p>
                         <img src="作品48.png" class="content-image" alt="" style="display: block; margin: auto;">
                         <p style="text-align:center; color:var(--secondary)">作者：冰麒麟</p>
+                        <img src="作品55.png" class="content-image" alt="" style="display: block; margin: auto;">
+                        <p style="text-align:center; color:var(--secondary)">作者：食堂人民科学协会-荣,晶体：乙二胺四乙酸钴(Ⅲ)酸钠</p>
                     </div>
                 </div>
             </section>
