--- a/w1.html
+++ b/w1.html
@@ -422,7 +422,7 @@
                     <img src="x.png" alt="" loading="lazy">
                     <div class="card-content">
                         <div>
-                            <h3>磷酸锰</h3>
+                            <h3>硫酸锰</h3>
                             <p class="card-meta">粉色晶体 · 塔盾复盐</p>
                         </div>
                         <p>第一个介绍的粉晶体，好做吗？</p>
