--- a/w1.html
+++ b/w1.html
@@ -403,7 +403,23 @@
             </div>
             </div>
             </article>
-            
+
+            <article class="card">
+                <div class="image-container">
+                <img src="indexc2_02.png" alt="硫酸镍" loading="lazy">
+                <div class="author-name">图源：紫色硫酸铜</div> 
+            </div>
+                <div class="card-content">
+                    <div>
+                        <h3>硫酸镍</h3>
+                        <p class="card-meta">绿黄色晶 · 致癌物质</p>
+                    </div>
+                    <p>可以做出键帽形态的硫酸镍，制作之前需要了解什么呢?</p>
+                    <div class="card-footer">
+                        <a href="15.html">阅读全文 →</a>
+            </div>
+            </div>
+            </article>
                 <article class="card">
                     <img src="x.png" alt="" loading="lazy">
                     <div class="card-content">
