--- a/04.html
+++ b/04.html
@@ -280,6 +280,21 @@
                     </ul>
                 </div>
             </section>
+
+            <section id="x7">
+                <h2>No.7 自封袋保存（推荐）</h2>
+                <div class="method-card">
+                    <ul class="step-list">
+                        <li>将晶体放在自封袋内保存</li>
+                        <p>封口前尽量排出里面的空气，可选用水排法（用水+大气压把内部空气挤出）</p>
+                        <P>建议在袋子上做标记</P>
+                        <div class="note">
+                            <strong>优点：</strong>
+                            <p>可随时取出拍照、降低风化，潮解、成本低</p>
+                        </div>
+                    </ul>
+                </div>
+            </section>
         </main>
 
         <nav class="nav">
@@ -292,6 +307,7 @@
                 <li><a href="#x4">西林瓶保存</a></li>
                 <li><a href="#x5">石蜡油保存</a></li>
                 <li><a href="#x6">玻封保存</a></li>
+                <li><a href="#x7">自封袋保存</a></li>
                 <li><a href="index.html">返回首页</a></li>
             </ul>
         </nav>
