--- a/index.html
+++ b/index.html
@@ -731,8 +731,8 @@
             <h3>📢 更新公告</h3>
             <div class="update-list">
                 <div class="update-item">
-                    <time>2024-02-16</time>
-                    <span>硫酸锰章节出炉</span>
+                    <time>2024-02-23</time>
+                    <span>硫酸镍章节</span>
                 </div>
             </div>
             <button class="close-popup">×</button>
